# hits

./: LICENSE  Main.hs  Makefile  hits.cabal
frontend/: bower.json  package-lock.json  package.json
frontend/src/: Main.purs
frontend/src/Hits/: Log.purs  Status.purs
frontend/src/Hits/Log/: Types.purs
frontend/src/Hits/Status/: Types.purs
src/: Hits.hs
src/Hits/: Core.hs  Parsing.hs  Types.hs
static/: hits.js  index.html
