name:                hits
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/pepegar/hits#readme
license:             BSD3
license-file:        LICENSE
author:              Pepe Garcia
maintainer:          jl.garhdez@gmail.com
copyright:           2017 Pepe Garcia
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hits
  other-modules:       Hits.Core
                     , Hits.Types
                     , Hits.Parsing
  build-depends:       base >= 4.7 && < 5
                     , text
                     , aeson
                     , conduit
                     , process
                     , attoparsec
  default-language:    Haskell2010

executable hits
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hits
                     , scotty
                     , blaze-html
                     , wai
                     , wai-middleware-static
                     , wai-cors
                     , wai-extra
                     , aeson
  default-language:    Haskell2010

test-suite hits-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hits
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pepegar/hits
